gateway/gatewaypre.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: default
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway
  ports:
    - port: 90
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  template:
    metadata:
      annotations:
        # Select the gateway injection template (rather than the default sidecar template)
        inject.istio.io/templates: gateway
      labels:
        # Set a unique label for the gateway. This is required to ensure Gateways can select this workload
        istio: ingressgateway
        # Enable gateway injection. If connecting to a revisioned control plane, replace with "istio.io/rev: revision-name"
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: istio-proxy
          image: auto # The image will automatically update each time the pod starts.
